--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "logic-gate-simulator",
+  "homepage": "https://marllon-freitas.github.io/logic-gate-simulator",
   "private": true,
   "version": "0.0.0",
   "description": "A React-based logic gate simulator",
@@ -18,13 +19,16 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "prepare": "husky"
   },
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
-    "lint-staged": {
+  "lint-staged": {
     "*.{ts,tsx}": [
       "eslint --fix",
       "prettier --write"
@@ -44,7 +48,10 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
